# moltchain

./: .dockerignore  .gitignore  AGENTS.md  AUDIT_SWEEP_PLAN.md  CHANGELOG.md  COMPREHENSIVE_RESEARCH_AUDIT.md  CONTRACTS_AUDIT_REPORT.md  CONTRIBUTING.md  CORE_AUDIT_REPORT.md  CORE_PRODUCTION_READINESS_AUDIT.md  CUSTODY_DEPLOYMENT.md  Cargo.toml  DEX_ARCHITECTURE_AUDIT.md  DEX_COMPLETION_MILESTONE.md  DEX_FINAL_PLAN.md  DEX_PRODUCTION_PLAN.md  DEX_WASM_AUDIT.md  Dockerfile  FINAL_AUDIT_FEB13.md  FINAL_PASS_FEB25_2026.md  FINAL_PRODUCTION_AUDIT.md  FULL_CONTRACT_AUDIT.md  LICENSE  MASTER_FINISH_LINE_PLAN.md  MOLTYID_VISION.md  MOLTYID_WALLET_PLAN.md  Makefile  NEW_FINDINGS_AUDIT.md  NON_DEX_SECURITY_AUDIT.md  PRODUCTION_AUDIT_FEB17.md  PRODUCTION_AUDIT_FINDINGS_2026-02-22.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_PLAN.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_AUDIT_COMPREHENSIVE.md  PRODUCTION_READINESS_AUDIT_FULL.md  PRODUCTION_READINESS_AUDIT_FULL_CONTRACTS.md  QUICK_START_GUIDE.md  README.md  SDK_FRONTEND_AUDIT.md  (+37 more)
.cargo/: audit.toml
.github/: copilot-instructions.md
artifacts/: agent_huge_suite_1771419639.json  agent_huge_suite_contracts_1771419679.json  agent_huge_suite_followup_1771419829.json  agent_huge_suite_rest_1771419807.json  agent_huge_suite_rpc_rest_1771419872.json
cli/: Cargo.toml
cli/src/: client.rs  config.rs  keygen.rs  keypair_manager.rs  main.rs  marketplace_demo.rs  query.rs  transaction.rs  wallet.rs  zk_prove.rs  zk_setup.rs
compiler/: Cargo.toml
compiler/src/: main.rs
contracts/lichencoin/: Cargo.toml  abi.json  lichencoin.wasm  test_contract.py
contracts/lichencoin/src/: lib.rs
contracts/shielded_pool/: Cargo.toml  shielded_pool.wasm
contracts/shielded_pool/src/: lib.rs
core/: Cargo.toml
core/benches/: processor_bench.rs
core/src/: account.rs  block.rs  consensus.rs  contract.rs  contract_instruction.rs  event_stream.rs  evm.rs  genesis.rs  governance.rs  hash.rs  keypair_file.rs  lib.rs  marketplace.rs  mempool.rs  mossstake.rs  multisig.rs  network.rs  nft.rs  privacy.rs  processor.rs  reefstake.rs  state.rs  transaction.rs
core/src/state/: metrics_state.rs  snapshot_io.rs
core/src/zk/: e2e_tests.rs  keys.rs  merkle.rs  mod.rs  note.rs  pedersen.rs  prover.rs  r1cs_bn254.rs  setup.rs  verifier.rs
core/src/zk/circuits/: mod.rs  shield.rs  transfer.rs  unshield.rs  utils.rs
core/tests/: activity_indexing.rs  adversarial_test.rs  atomic_state.rs  basic_test.rs  caller_verification.rs  contract_coverage.rs  contract_lifecycle.rs  cross_contract_call.rs  privileged_action_assurance.rs  production_readiness.rs  wire_format.rs  zk_lifecycle.rs
custody/: Cargo.toml
custody/src/: deposit_api_support.rs  main.rs
custody/src/chain_config/: discovery.rs
deploy/: Caddyfile.testnet-us  deploy.test.js  lichen-custody-mainnet.service  lichen-custody.service  lichen-faucet.service  lichen-validator.service  moltchain-custody-mainnet.service  moltchain-custody.service  moltchain-faucet.service  moltchain-validator.service  setup.sh
developers/: DEVELOPER_PORTAL_PLAN.md  _headers  architecture.html  changelog.html  cli-reference.html  contract-reference.html  contracts.html  getting-started.html  index.html  lichenid.html  moltyid.html  playground.html  rpc-reference.html  sdk-js.html  sdk-python.html  sdk-rust.html  shared-base-styles.css  shared-config.js  shared-theme.css  validator.html  ws-reference.html  zk-privacy.html
faucet/: Cargo.toml  faucet.css  faucet.js  faucet.test.js  index.html  shared-config.js  shared-theme.css
faucet-service/: Cargo.toml
faucet-service/src/: main.rs
faucet/shared/: env.js  utils.js  wallet-connect.js
faucet/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: account_deser.rs  block_deser.rs  consensus_vote.rs  hash_input.rs  instruction_parse.rs  mempool_ops.rs  p2p_message.rs  rpc_request.rs  transaction_deser.rs  wasm_exec.rs  zk_proof_deser.rs
genesis/: Cargo.toml
genesis/src/: lib.rs  main.rs
p2p/: Cargo.toml
p2p/src/: erasure.rs  gossip.rs  kademlia.rs  lib.rs  message.rs  nat.rs  network.rs  peer.rs  peer_ban.rs  peer_store.rs
rpc/: Cargo.toml
rpc/src/: dex.rs  dex_ws.rs  launchpad.rs  lib.rs  prediction.rs  shielded.rs  ws.rs
rpc/tests/: compat_routes.rs  rpc_full_coverage.rs  rpc_handlers.rs  shielded_handlers.rs
sdk/: Cargo.toml
sdk/js/: .gitignore  generate_transactions.ts  package.json  test-all-features.ts  test-subscriptions.js  test.js  test_bincode_format.js  test_cross_sdk_compat.js  tsconfig.json  tsconfig.test.json
sdk/js/examples/: basic.ts  subscriptions.ts  transaction.ts
sdk/js/src/: bincode.ts  connection.ts  index.ts  keypair.ts  publickey.ts  transaction.ts
sdk/python/: .gitignore  README.md  adversarial_security_test.py  deep_stress_test.py  e2e_agent_test.py  financial_attack_test.py  generate_wallet.py  production_audit.py  requirements.txt  send_signed_transaction.py  send_test_transactions.py  setup.py  test_bincode.py  test_cross_sdk_compat.py  test_sdk_live.py  test_websocket_sdk.py  test_websocket_simple.py
sdk/python/examples/: basic.py  comprehensive_test.py  generate_transactions.py  subscriptions.py  transaction.py
sdk/python/lichen/: __init__.py  bincode.py  connection.py  keypair.py  publickey.py  shielded.py  transaction.py
sdk/python/moltchain/: __init__.py  bincode.py  connection.py  keypair.py  publickey.py  shielded.py  transaction.py
sdk/python/wallets/: wallet.json
sdk/rust/: Cargo.toml  README.md
sdk/rust/artifacts/: agent_tx_contract_suite_1771422824.json
sdk/rust/examples/: agent_contract_tx_suite.rs  basic.rs  comprehensive_test.rs  generate_real_txs.rs  generate_transactions.rs  generate_txs.rs  test_transactions.rs
sdk/rust/src/: client.rs  error.rs  keypair.rs  lib.rs  transaction.rs  types.rs
sdk/src/: crosscall.rs  dex.rs  lib.rs  nft.rs  token.rs
tests/e2e/: Cargo.toml
tests/e2e/tests/: e2e.rs
validator/: Cargo.toml
validator/src/: block_producer.rs  block_receiver.rs  consensus.rs  keypair_loader.rs  main.rs  sync.rs  threshold_signer.rs  updater.rs  wal.rs
(+897 files in other folders)
