[workspace]
members = [
    "core",
    "validator",
    "rpc",
    "cli",
    "p2p",
    "faucet",
    "custody",
]
exclude = [
    "contracts/*",
    "sdk",
    "compiler",
]

resolver = "2"

# Workspace-wide dependencies for tests
[workspace.dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
