[workspace]
members = [
    "core",
    "validator",
    "rpc",
    "cli",
    "p2p",
    "faucet-service",
    "custody",
    "genesis",
]
exclude = [
    "contracts/*",
    "sdk",
    "compiler",
]

resolver = "2"

# Workspace-wide dependencies
[workspace.dependencies]
tempfile = "3.8"
ed25519-dalek = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
