[package]
name = "lichen-cli"
version = "0.5.4"
edition = "2021"
authors = ["Lichen Labs <trading.lobster@lichen.network>"]
description = "Lichen command-line interface"
license = "MIT"

[[bin]]
name = "lichen"
path = "src/main.rs"

[[bin]]
name = "marketplace-demo"
path = "src/marketplace_demo.rs"

[[bin]]
name = "zk-prove"
path = "src/zk_prove.rs"

[dependencies]
lichen-core = { path = "../core" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
dirs = "5.0"
base64 = "0.22.1"
bincode = "1.3"
hex = "0.4"
base58 = "0.2"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-encoder = "0.204"
sha2 = "0.10"
getrandom = "0.4.1"
aes-gcm = "0.10"
argon2 = "0.5"

[dev-dependencies]
tempfile = "3"
