[package]
name = "lichen-compiler"
version = "0.5.4"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
lichen-core = { path = "../core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
