[package]
name = "moltchain-core"
version = "0.1.0"
edition = "2021"
authors = ["Trading Lobster <trading.lobster@moltchain.io>"]
description = "MoltChain core blockchain implementation"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1"
ed25519-dalek = "2.0"
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"
sha3 = "0.10"  # For Keccak256 (EVM addresses)
rocksdb = "0.21"
thiserror = "1.0"
rand = { version = "0.9.2", features = ["std", "os_rng"] }
rand_core = "0.10.0"
getrandom = "0.4.1"
wasmer = "4.2"  # WASM runtime for smart contracts
wasmer-compiler-cranelift = "4.2"  # JIT compiler for WASM
wasmer-middlewares = "4.2"  # Metering middleware for compute limits
chrono = { version = "0.4", features = ["serde"] }  # For genesis timestamps
revm = "34.0.0"
alloy-consensus = { version = "0.7.3", default-features = false, features = ["k256"] }
alloy-primitives = "0.8.26"
alloy-rlp = "0.3.13"
derive_more = { version = "1.0.0", features = ["display"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.24.0"
bincode = "1"

[[bench]]
name = "processor_bench"
harness = false
