[package]
name = "lichen-core"
version = "0.5.0"
edition = "2021"
authors = ["Lichen Labs <trading.lobster@lichen.network>"]
description = "Lichen core blockchain implementation"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1"
ml-dsa = { workspace = true }
slh-dsa = { workspace = true }
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"
sha3 = "0.10"  # For Keccak256 (EVM addresses)
rocksdb = "0.21"
thiserror = "1.0"
rand = { version = "0.9.2", features = ["std", "os_rng"] }
rand_core = "0.10.0"
getrandom = "0.4.1"
wasmer = "4.2"  # WASM runtime for smart contracts
wasmer-compiler-cranelift = "4.2"  # JIT compiler for WASM
wasmer-middlewares = "4.2"  # Metering middleware for compute limits
chrono = { version = "0.4", features = ["serde"] }  # For genesis timestamps
rayon = "1.10"  # Parallel TX processing for non-conflicting account sets
lru = "0.12"  # P9-CORE-04: LRU eviction for MODULE_CACHE
tracing = "0.1"  # Logging for VoteAuthority and consensus internals
revm = "34.0.0"
alloy-consensus = { version = "0.7.3", default-features = false, features = ["k256"] }
alloy-primitives = "0.8.26"
alloy-rlp = "0.3.13"
derive_more = { version = "1.0.0", features = ["display"] }

# ZK proof dependencies.
# The live shielded runtime is Plonky3/FRI; arkworks remains for field and
# constraint-system helpers used by the current circuit and witness layer.
ark-ff = { version = "0.4", optional = true }
ark-ec = { version = "0.4", optional = true }
ark-bn254 = { version = "0.4", optional = true }
ark-relations = { version = "0.4", optional = true }
ark-r1cs-std = { version = "0.4", optional = true }
ark-crypto-primitives = { version = "0.4", features = ["sponge", "r1cs"], optional = true }
ark-std = { version = "0.4", features = ["getrandom"], optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
p3-air = { version = "0.5.2", optional = true }
p3-challenger = { version = "0.5.2", optional = true }
p3-commit = { version = "0.5.2", optional = true }
p3-dft = { version = "0.5.2", optional = true }
p3-field = { version = "0.5.2", optional = true }
p3-fri = { version = "0.5.2", optional = true }
p3-goldilocks = { version = "0.5.2", optional = true }
p3-matrix = { version = "0.5.2", optional = true }
p3-merkle-tree = { version = "0.5.2", optional = true }
p3-poseidon2 = { version = "0.5.2", optional = true }
p3-poseidon2-air = { version = "0.5.2", optional = true }
p3-symmetric = { version = "0.5.2", optional = true }
p3-uni-stark = { version = "0.5.2", optional = true }

[features]
default = ["zk"]
zk = ["ark-ff", "ark-ec", "ark-bn254", "ark-relations", "ark-r1cs-std", "ark-crypto-primitives", "ark-std", "chacha20poly1305", "p3-air", "p3-challenger", "p3-commit", "p3-dft", "p3-field", "p3-fri", "p3-goldilocks", "p3-matrix", "p3-merkle-tree", "p3-poseidon2", "p3-poseidon2-air", "p3-symmetric", "p3-uni-stark"]  # Production ZK privacy layer

[dev-dependencies]
criterion = "0.5"
tempfile = "3.24.0"
bincode = "1"
wat = "1"
proptest = "1"

[[bench]]
name = "processor_bench"
harness = false
