[package]
name = "moltchain-custody"
version = "0.1.0"
edition = "2021"
authors = ["Trading Lobster <trading.lobster@moltchain.io>"]
description = "MoltChain custody service"

[dependencies]
axum = "0.7"
base64 = "0.22.1"
bincode = "1.3"
bs58 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
frost-ed25519 = "2"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rocksdb = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
ed25519-dalek = "2.1"
subtle = "2"
moltchain-core = { path = "../core" }
