[package]
name = "lichen-faucet"
version = "0.4.21"
edition = "2021"

authors = ["Lichen Labs <trading.lobster@lichen.network>"]
description = "Lichen faucet service"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lichen-core = { path = "../core" }
