[package]
name = "moltchain-faucet"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1"

# MoltChain dependencies
moltchain-core = { path = "../core" }

