[package]
name = "moltchain-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
moltchain-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "transaction_deser"
path = "fuzz_targets/transaction_deser.rs"
doc = false

[[bin]]
name = "instruction_parse"
path = "fuzz_targets/instruction_parse.rs"
doc = false

[[bin]]
name = "block_deser"
path = "fuzz_targets/block_deser.rs"
doc = false

[[bin]]
name = "consensus_vote"
path = "fuzz_targets/consensus_vote.rs"
doc = false

[[bin]]
name = "account_deser"
path = "fuzz_targets/account_deser.rs"
doc = false

[[bin]]
name = "hash_input"
path = "fuzz_targets/hash_input.rs"
doc = false

[[bin]]
name = "mempool_ops"
path = "fuzz_targets/mempool_ops.rs"
doc = false

[[bin]]
name = "rpc_request"
path = "fuzz_targets/rpc_request.rs"
doc = false

[[bin]]
name = "wasm_exec"
path = "fuzz_targets/wasm_exec.rs"
doc = false

[[bin]]
name = "zk_proof_deser"
path = "fuzz_targets/zk_proof_deser.rs"
doc = false

[[bin]]
name = "p2p_message"
path = "fuzz_targets/p2p_message.rs"
doc = false
