[package]
name = "moltchain-genesis"
version = "0.1.0"
edition = "2021"
authors = ["Trading Lobster <trading.lobster@moltchain.network>"]
description = "MoltChain genesis block creator — standalone tool for bootstrapping a new chain"

[dependencies]
moltchain-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
ureq = { version = "2", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "moltchain_genesis"
path = "src/lib.rs"

[[bin]]
name = "moltchain-genesis"
path = "src/main.rs"
