[package]
name = "lichen-genesis"
version = "0.4.37"
edition = "2021"
authors = ["Lichen Labs <trading.lobster@lichen.network>"]
description = "Lichen genesis block creator — standalone tool for bootstrapping a new chain"

[dependencies]
lichen-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }

[lib]
name = "lichen_genesis"
path = "src/lib.rs"

[[bin]]
name = "lichen-genesis"
path = "src/main.rs"
