[package]
name = "lichen-genesis"
version = "0.5.0"
edition = "2021"
authors = ["Lichen Labs <trading.lobster@lichen.network>"]
description = "Lichen genesis block creator — standalone tool for bootstrapping a new chain"
license = "MIT"

[dependencies]
lichen-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ureq is used ONLY by the lichen-genesis binary for a one-time live price
# fetch during genesis creation.  The library (lib.rs) never fetches prices.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2"

[dev-dependencies]
tempfile = "3"

[lib]
name = "lichen_genesis"
path = "src/lib.rs"

[[bin]]
name = "lichen-genesis"
path = "src/main.rs"
