[package]
name = "moltchain-p2p"
version = "0.1.0"
edition = "2021"
authors = ["Trading Lobster <trading.lobster@moltchain.io>"]
description = "MoltChain P2P networking with QUIC"

[dependencies]
moltchain-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
quinn = { version = "0.11", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
sha2 = "0.10"
x509-parser = { version = "0.16", features = ["verify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
dirs = "5.0"
anyhow = "1.0"
bytes = "1.5"
dashmap = "6.0"
lz4_flex = "0.11"
reed-solomon-erasure = "6.0"
