[package]
name = "lichen-p2p"
version = "0.5.4"
edition = "2021"
authors = ["Lichen Labs <trading.lobster@lichen.network>"]
description = "Lichen P2P networking with QUIC"
license = "Apache-2.0"

[dependencies]
lichen-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
quinn = { version = "0.11", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
rand = "0.8"
ml-kem = "0.2.3"
hkdf = "0.12"
chacha20poly1305 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
dirs = "5.0"
anyhow = "1.0"
bytes = "1.5"
dashmap = "6.0"
lz4_flex = "0.11"
reed-solomon-erasure = "6.0"
