[package]
name = "moltchain-rpc"
version = "0.1.0"
edition = "2021"
authors = ["Trading Lobster <trading.lobster@moltchain.io>"]
description = "MoltChain JSON-RPC server"

[dependencies]
moltchain-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22.1"
bincode = "1.3"
futures-util = "0.3"
hex = "0.4"
sha2 = "0.10"
alloy-primitives = "0.8.26"
bs58 = "0.5"
lru = "0.12"

[dev-dependencies]
tempfile = "3.10"
tower = { version = "0.4", features = ["util"] }
