[package]
name = "lichen-rpc"
version = "0.4.37"
edition = "2021"
authors = ["Lichen Labs <hello@lichen.network>"]
description = "Lichen JSON-RPC server"

[dependencies]
lichen-core = { path = "../core", features = ["zk"] }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "compression-br"] }
base64 = "0.22.1"
bincode = "1.3"
futures-util = "0.3"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"  # AUDIT-FIX A11-02: Keccak-256 for EVM event topic hashing
alloy-primitives = "0.8.26"
bs58 = "0.5"
lru = "0.12"
tower = { version = "0.4", features = ["util", "limit"] }
dashmap = "6.0"
rmp-serde = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ark-bn254 = "0.4"
ark-ff = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3.10"
