[package]
name = "moltchain-contract-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Trading Lobster <trading.lobster@moltchain.io>"]
description = "MoltChain Smart Contract SDK"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }
dlmalloc = { version = "0.2", features = ["global"] }  # Sound WASM allocator (replaces abandoned wee_alloc)

[features]
default = []
std = ["serde/std", "serde_json/std"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
