[package]
name = "lichen-contract-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Lichen Labs <hello@lichen.network>"]
description = "Lichen Smart Contract SDK"
license = "Apache-2.0"
repository = "https://github.com/lobstercove/lichen"
homepage = "https://lichen.network"
documentation = "https://developers.lichen.network"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }
dlmalloc = { version = "0.2", features = ["global"] }  # Sound WASM allocator (replaces abandoned wee_alloc)

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
p3-field = "0.5.2"
p3-goldilocks = "0.5.2"
p3-symmetric = "0.5.2"

[dev-dependencies]
lichen-core = { version = "=0.5.7", path = "../core" }

[features]
default = []
std = ["serde/std", "serde_json/std"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
