[package]
name = "moltchain-validator"
version = "0.2.6"
edition = "2021"
authors = ["Trading Lobster <trading.lobster@moltchain.network>"]
description = "MoltChain validator node"

[dependencies]
axum = "0.7"
bincode = "1.3"
moltchain-core = { path = "../core" }
moltchain-genesis = { path = "../genesis" }
moltchain-p2p = { path = "../p2p" }
moltchain-rpc = { path = "../rpc" }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
semver = "1.0"
flate2 = "1.0"
tar = "0.4"
zeroize = "1.7"

[dev-dependencies]
tempfile = "3"
