[package]
name = "shielded-pool"
version = "0.1.0"
edition = "2021"
authors = ["MoltChain Team"]
description = "Shielded pool contract for zero-knowledge private transactions on MoltChain"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
