[package]
name = "shielded-pool"
version = "0.1.0"
edition = "2021"
authors = ["Lichen Team"]
description = "Shielded pool contract for zero-knowledge private transactions on Lichen"

[workspace]

[dependencies]
lichen-sdk = { package = "lichen-contract-sdk", path = "../../sdk" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib", "rlib"]
