[package]
name = "moltchain-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Trading Lobster <trading.lobster@moltchain.io>"]
description = "MoltChain Rust SDK - Build on MoltChain with Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moltchain/moltchain"
keywords = ["blockchain", "cryptocurrency", "moltchain"]
categories = ["cryptography", "network-programming"]

[lib]
name = "moltchain_sdk"
path = "src/lib.rs"

[dependencies]
moltchain-core = { path = "../../core" }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"
hex = "0.4"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
wasm = []  # Future: WASM contract support
