[package]
name = "lichen-client-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Lichen Labs <hello@lichen.network>"]
description = "Lichen Rust SDK - Build on Lichen with Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lobstercove/lichen"
keywords = ["blockchain", "cryptocurrency", "lichen"]
categories = ["cryptography", "network-programming"]

[lib]
name = "lichen_client_sdk"
path = "src/lib.rs"

[dependencies]
lichen-core = { path = "../../core" }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"
hex = "0.4"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
wasm = []  # Future: WASM contract support
