[workspace]

[package]
name = "moltchain-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
moltchain-sdk = { path = "../../sdk", package = "moltchain-contract-sdk" }
musd-token = { path = "../../contracts/musd_token" }
wsol-token = { path = "../../contracts/wsol_token" }
weth-token = { path = "../../contracts/weth_token" }
dex-core = { path = "../../contracts/dex_core" }
dex-amm = { path = "../../contracts/dex_amm" }
dex-router = { path = "../../contracts/dex_router" }
dex-governance = { path = "../../contracts/dex_governance" }
dex-margin = { path = "../../contracts/dex_margin" }
dex-rewards = { path = "../../contracts/dex_rewards" }
dex-analytics = { path = "../../contracts/dex_analytics" }

[[test]]
name = "e2e"
path = "tests/e2e.rs"
